# iri

./: iri.cabal
.github/workflows/: check.yaml  format-and-test.yaml
punycode/Data/Text/: Punycode.hs
punycode/Data/Text/Punycode/: Decode.hs  Encode.hs  Shared.hs
test/: Main.hs
tests/: Main.hs
